--- a/index.html
+++ b/index.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <link rel="stylesheet" href="bluestyle.css">
 <title>Hello World!</title>
 </head>
 <body>
 
 <h1>Hello world!</h1>
 <p>This is the first file in my new Git Repo.</p>
+
+<h1>This are ahcnages for the hello-world BRANCH</h1>
+<p>lubba dubba dub dub</p>
 
 </body>
 </html>
