Updated index.htnl file for push command

--- a/index.html
+++ b/index.html
@@ -12,5 +12,8 @@
 <h1>This are ahcnages for the hello-world BRANCH</h1>
 <p>lubba dubba dub dub</p>
 
+<h1>First push</h1>
+<p>First push command to origin repo on github</p>
+
 </body>
 </html>
